// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeptideSearchResult should render with the correct number of results in the title, not own job 1`] = `
<DocumentFragment>
  <div
    class="sidebar-layout"
  >
    <section
      class="sidebar-layout__sidebar"
    />
    <section
      class="sidebar-layout__content"
    >
      <section
        class="sidebar-layout__title"
      />
      <div
        class="page-intro"
      >
        <h1
          class="big"
        >
          UniProtKB
          <small>
             2 results 
          </small>
          <small>
             found in peptide search 
          </small>
        </h1>
      </div>
      <div
        class="button-group results-buttons"
      >
        <button
          class="button tertiary disabled"
          disabled=""
          title="Select at least one entry to run a BLAST job"
          type="button"
        >
          BLAST
        </button>
        <button
          class="button tertiary disabled"
          disabled=""
          title="Select at least 2 entries to run an Align job"
          type="button"
        >
          Align
        </button>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Download
        </button>
        <button
          class="button tertiary disabled"
          disabled=""
          title="Select at least one entry to add to the basket"
          type="button"
        >
          <test-file-stub />
          Add
        </button>
        <button
          class="button tertiary disabled"
          disabled=""
          type="button"
        >
          <test-file-stub />
          Statistics
        </button>
        <button
          class="button tertiary large-icon"
          data-testid="table-card-toggle"
          title="Switch to \\"table\\" view"
          type="button"
        >
          <test-file-stub
            classname="results-buttons__toggle"
          />
          <test-file-stub
            classname="results-buttons__toggle results-buttons__toggle--active"
          />
        </button>
      </div>
      <div
        class="results-data"
      >
        <div>
          <section>
            <section
              class="card card--has-link"
            >
              <a
                aria-hidden="true"
                class="card__link"
                data-testid="background-link"
                href="/uniprotkb/O00311"
                tabindex="-1"
              />
              <div
                class="card__container"
              >
                <div
                  class="card__header"
                >
                  <input
                    data-testid="up-card-checkbox"
                    type="checkbox"
                  />
                  <h2
                    class="tiny"
                  >
                    <span
                      class="entry-title"
                    >
                      <span
                        class="entry-title__status icon--reviewed"
                        title="This marks a reviewed UniProtKB entry"
                      >
                        <test-file-stub />
                      </span>
                      O00311 · CDC7_HUMAN
                    </span>
                  </h2>
                </div>
                <div
                  class="card__content"
                >
                  <section>
                    Cell division cycle 7-related protein kinase · 
                    <a
                      href="/taxonomy/9606"
                      title="Homo sapiens (Human), taxon ID 9606"
                    >
                      Homo sapiens (Human)
                    </a>
                     · 
                    <strong>
                      EC number:
                    </strong>
                     2.7.11.1 · 
                    <strong>
                      Gene:
                    </strong>
                     CDC7 (CDC7L1) · 574 amino-acids · 
                    <span
                      title="Annotation Score"
                    >
                      <span
                        class="doughnut-chart--small colour-platinum"
                      >
                        <span
                          class="doughnut-chart--small__left-wrap"
                        >
                          <span
                            class="doughnut-chart--small__left-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__right-wrap"
                        >
                          <span
                            class="doughnut-chart--small__right-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__inner-circle"
                        >
                          5/5
                        </span>
                      </span>
                    </span>
                  </section>
                  <small>
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0418"
                        >
                           #Kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0723"
                        >
                           #Serine/threonine-protein kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0808"
                        >
                           #Transferase
                        </a>
                      </li>
                    </ul>
                     · 
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0131"
                        >
                           #Cell cycle
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0132"
                        >
                           #Cell division
                        </a>
                      </li>
                    </ul>
                  </small>
                </div>
              </div>
            </section>
          </section>
          <section>
            <section
              class="card card--has-link"
            >
              <a
                aria-hidden="true"
                class="card__link"
                data-testid="background-link"
                href="/uniprotkb/Q9Z0H0"
                tabindex="-1"
              />
              <div
                class="card__container"
              >
                <div
                  class="card__header"
                >
                  <input
                    data-testid="up-card-checkbox"
                    type="checkbox"
                  />
                  <h2
                    class="tiny"
                  >
                    <span
                      class="entry-title"
                    >
                      <span
                        class="entry-title__status icon--reviewed"
                        title="This marks a reviewed UniProtKB entry"
                      >
                        <test-file-stub />
                      </span>
                      Q9Z0H0 · CDC7_MOUSE
                    </span>
                  </h2>
                </div>
                <div
                  class="card__content"
                >
                  <section>
                    Cell division cycle 7-related protein kinase · 
                    <a
                      href="/taxonomy/10090"
                      title="Mus musculus (Mouse), taxon ID 10090"
                    >
                      Mus musculus (Mouse)
                    </a>
                     · 
                    <strong>
                      EC number:
                    </strong>
                     2.7.11.1 · 
                    <strong>
                      Gene:
                    </strong>
                     Cdc7 (Cdc7l1) · 564 amino-acids · 
                    <span
                      title="Annotation Score"
                    >
                      <span
                        class="doughnut-chart--small colour-platinum"
                      >
                        <span
                          class="doughnut-chart--small__left-wrap"
                        >
                          <span
                            class="doughnut-chart--small__left-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__right-wrap"
                        >
                          <span
                            class="doughnut-chart--small__right-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__inner-circle"
                        >
                          5/5
                        </span>
                      </span>
                    </span>
                  </section>
                  <small>
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0418"
                        >
                           #Kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0723"
                        >
                           #Serine/threonine-protein kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0808"
                        >
                           #Transferase
                        </a>
                      </li>
                    </ul>
                     · 
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0131"
                        >
                           #Cell cycle
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0132"
                        >
                           #Cell division
                        </a>
                      </li>
                    </ul>
                  </small>
                </div>
              </div>
            </section>
          </section>
        </div>
        <div
          class="data-loader__loading"
        />
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`PeptideSearchResult should render with the correct number of results in the title, own user job 1`] = `
<DocumentFragment>
  <div
    class="sidebar-layout"
  >
    <section
      class="sidebar-layout__sidebar"
    />
    <section
      class="sidebar-layout__content"
    >
      <section
        class="sidebar-layout__title"
      />
      <div
        class="page-intro"
      >
        <h1
          class="big"
        >
          UniProtKB
          <small>
             2 results 
          </small>
          <small>
             found in peptide search title
          </small>
        </h1>
      </div>
      <div
        class="button-group results-buttons"
      >
        <button
          class="button tertiary disabled"
          disabled=""
          title="Select at least one entry to run a BLAST job"
          type="button"
        >
          BLAST
        </button>
        <button
          class="button tertiary disabled"
          disabled=""
          title="Select at least 2 entries to run an Align job"
          type="button"
        >
          Align
        </button>
        <button
          class="button tertiary"
          type="button"
        >
          <test-file-stub />
          Download
        </button>
        <button
          class="button tertiary disabled"
          disabled=""
          title="Select at least one entry to add to the basket"
          type="button"
        >
          <test-file-stub />
          Add
        </button>
        <button
          class="button tertiary disabled"
          disabled=""
          type="button"
        >
          <test-file-stub />
          Statistics
        </button>
        <button
          class="button tertiary large-icon"
          data-testid="table-card-toggle"
          title="Switch to \\"table\\" view"
          type="button"
        >
          <test-file-stub
            classname="results-buttons__toggle"
          />
          <test-file-stub
            classname="results-buttons__toggle results-buttons__toggle--active"
          />
        </button>
      </div>
      <div
        class="results-data"
      >
        <div>
          <section>
            <section
              class="card card--has-link"
            >
              <a
                aria-hidden="true"
                class="card__link"
                data-testid="background-link"
                href="/uniprotkb/O00311"
                tabindex="-1"
              />
              <div
                class="card__container"
              >
                <div
                  class="card__header"
                >
                  <input
                    data-testid="up-card-checkbox"
                    type="checkbox"
                  />
                  <h2
                    class="tiny"
                  >
                    <span
                      class="entry-title"
                    >
                      <span
                        class="entry-title__status icon--reviewed"
                        title="This marks a reviewed UniProtKB entry"
                      >
                        <test-file-stub />
                      </span>
                      O00311 · CDC7_HUMAN
                    </span>
                  </h2>
                </div>
                <div
                  class="card__content"
                >
                  <section>
                    Cell division cycle 7-related protein kinase · 
                    <a
                      href="/taxonomy/9606"
                      title="Homo sapiens (Human), taxon ID 9606"
                    >
                      Homo sapiens (Human)
                    </a>
                     · 
                    <strong>
                      EC number:
                    </strong>
                     2.7.11.1 · 
                    <strong>
                      Gene:
                    </strong>
                     CDC7 (CDC7L1) · 574 amino-acids · 
                    <span
                      title="Annotation Score"
                    >
                      <span
                        class="doughnut-chart--small colour-platinum"
                      >
                        <span
                          class="doughnut-chart--small__left-wrap"
                        >
                          <span
                            class="doughnut-chart--small__left-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__right-wrap"
                        >
                          <span
                            class="doughnut-chart--small__right-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__inner-circle"
                        >
                          5/5
                        </span>
                      </span>
                    </span>
                  </section>
                  <small>
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0418"
                        >
                           #Kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0723"
                        >
                           #Serine/threonine-protein kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0808"
                        >
                           #Transferase
                        </a>
                      </li>
                    </ul>
                     · 
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0131"
                        >
                           #Cell cycle
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0132"
                        >
                           #Cell division
                        </a>
                      </li>
                    </ul>
                  </small>
                </div>
              </div>
            </section>
          </section>
          <section>
            <section
              class="card card--has-link"
            >
              <a
                aria-hidden="true"
                class="card__link"
                data-testid="background-link"
                href="/uniprotkb/Q9Z0H0"
                tabindex="-1"
              />
              <div
                class="card__container"
              >
                <div
                  class="card__header"
                >
                  <input
                    data-testid="up-card-checkbox"
                    type="checkbox"
                  />
                  <h2
                    class="tiny"
                  >
                    <span
                      class="entry-title"
                    >
                      <span
                        class="entry-title__status icon--reviewed"
                        title="This marks a reviewed UniProtKB entry"
                      >
                        <test-file-stub />
                      </span>
                      Q9Z0H0 · CDC7_MOUSE
                    </span>
                  </h2>
                </div>
                <div
                  class="card__content"
                >
                  <section>
                    Cell division cycle 7-related protein kinase · 
                    <a
                      href="/taxonomy/10090"
                      title="Mus musculus (Mouse), taxon ID 10090"
                    >
                      Mus musculus (Mouse)
                    </a>
                     · 
                    <strong>
                      EC number:
                    </strong>
                     2.7.11.1 · 
                    <strong>
                      Gene:
                    </strong>
                     Cdc7 (Cdc7l1) · 564 amino-acids · 
                    <span
                      title="Annotation Score"
                    >
                      <span
                        class="doughnut-chart--small colour-platinum"
                      >
                        <span
                          class="doughnut-chart--small__left-wrap"
                        >
                          <span
                            class="doughnut-chart--small__left-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__right-wrap"
                        >
                          <span
                            class="doughnut-chart--small__right-wrap__loader colour-sea-blue"
                            style="transform: rotate(180deg);"
                          />
                        </span>
                        <span
                          class="doughnut-chart--small__inner-circle"
                        >
                          5/5
                        </span>
                      </span>
                    </span>
                  </section>
                  <small>
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0418"
                        >
                           #Kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0723"
                        >
                           #Serine/threonine-protein kinase
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0808"
                        >
                           #Transferase
                        </a>
                      </li>
                    </ul>
                     · 
                    <ul
                      class="keyword-view--inline expandable-list no-bullet"
                    >
                      <li>
                        <a
                          href="/keywords/KW-0131"
                        >
                           #Cell cycle
                        </a>
                      </li>
                      <li>
                        <a
                          href="/keywords/KW-0132"
                        >
                           #Cell division
                        </a>
                      </li>
                    </ul>
                  </small>
                </div>
              </div>
            </section>
          </section>
        </div>
        <div
          class="data-loader__loading"
        />
      </div>
    </section>
  </div>
</DocumentFragment>
`;
